--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </main>
 
 <footer class="footer">
-    <a class="header-logo" href="./index.html">Web<span class="logo-item">Studio</span></a>
+    <a class="header-logo" href="./index.html">Web<span class="logo-item-footer">Studio</span></a>
     <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
